class Ellipse {
}
