class Rectangle {
}