class Square(points: List<Point>) : Rectangle(points) {
    init {
        // todo: verify that the difference between the x values is the same as the difference
        //  between the y values for the two points
    }
}
