class Triangle {
}
